# latam-challenge

./: .gitignore  Makefile  pyproject.toml  requirements.txt
src/: challenge.ipynb  q1_memory.py  q1_time.py  q2_memory.py  q2_time.py  q3_memory.py  q3_time.py  schemas.py  utils.py
tests/: test_q1.py  test_q2.py  test_q3.py  test_utils.py
