[project]
name = "data-engineer-callenge"
version = "0.1.0"
description = "A challenge to show my skills and knowledge in data processing with python and different data structures."
authors = [
    {name = "voktos",email = "voktos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pyproject-flake8 = "^7.0.0"


[tool.poetry.group.test.dependencies]
parameterized = "^0.9.0"

